# ema-agent

./: CLAUDE.md  pyproject.toml
ema_agent/: __init__.py  indexing.py  llm.py  retriever.py  store_index_faq.py  store_index_init.py  workflow.py
examples/: faq_cli.py  faq_dataset.py
src/: __init__.py  store_index_faq.py  workflow.py
src/ema_agent/: __init__.py  agent_starter.py  indexing.py  prompts.py  workflow.py
src/ema_agent/retrieval/: __init__.py  hybrid.py  mongolian.py  rerank.py
tests/: app.py
